--- a/assets/back/css/custom.css
+++ b/assets/back/css/custom.css
@@ -63,16 +63,16 @@
 }
 
 .image_upload {
-	max-height:300px; 
+	max-height:300px;
 	max-width: 478px;
 }
 
 .image_table {
-	max-height:60px; 
+	max-height:60px;
 	max-width: 100px;
 }
 
-.fc-basic-view .fc-day-number, 
+.fc-basic-view .fc-day-number,
 .fc-basic-view .fc-week-number {
   padding: 10px !important;
   font-size: 20px;
@@ -88,4 +88,8 @@
 
 .appointment {
 	min-height: 399px;
+}
+
+.note-editable img {
+	padding: 10px;
 }
