--- a/assets/back/css/template-style.css
+++ b/assets/back/css/template-style.css
@@ -6100,7 +6100,7 @@ button.close {
   top: 0;
   left: 0;
   z-index: 1060;
-  display: block;
+  display: none;
   max-width: 276px;
   padding: 1px;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
