--- a/assets/back/css/custom.css
+++ b/assets/back/css/custom.css
@@ -1,3 +1,15 @@
+.bgimage {
+	background: url('/assets/back/img/bg.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.login_div {
+	background-color: #f5f5f57d;
+}
+
 .table {
 	width: 100% !important;
 }
