--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -1477,3 +1477,9 @@ ul.work li.active {
   margin: 0px;
   font-size: 25px;
 }
+.social-media {
+  background-color: #b9b7b7;
+}
+.white {
+  color: #ffffff;
+}
